# csharp-rust

./: .gitignore  chsarp-rust.sln
chsarp-rust/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RustLib.cs  ViewModel.cs  chsarp-rust.csproj
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
