[package]
name = "rust-lib"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "abort"
